# cac-os

./: .gitignore  Makefile  README.md  RUN.md  pyproject.toml
core/: capability_registry.md  eval_source.md  execution_rules.md  self_eval_checklist.md  skill_registry.json  validation_matrix.md
docs/: HOW_TO_RUN.md  OVERVIEW.md  SETUP.md  SKILL_CATALOG.md  STATUS.md  repolens_bridge.md
execution_models/: dependency_graph.md  parallel_execution_model.md  task_router.md
frontend/: README.md  index.html
generated_projects/: README.md
runtime/: __init__.py  __main__.py  deterministic.py  frontend_sync.py  pipeline_plan.py  report_cli.py  report_renderer.py  report_ui.py  skill_finish.py  skill_orchestrator.py  skill_parser.py  skill_registry_builder.py  skill_runner.py  validate_pipeline.py
scripts/: cac_os.py  task_registry.json
skills/: run_all_skills.skill.md  skill_registry.json  skill_registry.md
tests/: conftest.py  test_coverage_final.py  test_coverage_gaps.py  test_coverage_misc.py  test_coverage_orchestrator.py  test_coverage_reporting.py  test_frontend_sync.py  test_hardening.py  test_hardening_extra.py  test_pipeline_plan.py  test_report_renderer.py  test_runtime_cli.py  test_runtime_main.py  test_skill_orchestrator.py  test_skill_parser.py  test_skill_parser_branches.py  test_skill_parser_extra.py  test_skill_registry_builder.py  test_skill_runner.py  test_skill_runner_extra.py  test_validate_pipeline_extra.py
tools/: build_frontend.py  build_skill_registry.py  install_cursor_skills.py  repolens_eval_runner.py  serve_frontend.py
(+100 files in other folders)
