[project]
name = "repo-analyser"
version = "2.0.0"
description = "Deterministic PML/OCL eval framework for repository analysis"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "black==26.5.1",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["runtime"]
branch = false
omit = [
    "runtime/__main__.py",
    "runtime/report_cli.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["runtime", "tools", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
packages = ["runtime"]
